# robwork

./: CMakeLists.txt  README.md  rwsettings.xml
src/: linear.cpp  reachability.cpp  rrt_connect.cpp
src/exercises/: cubic.py  forward_kinematics.cpp  linear.cpp  parabolic.cpp  pruning.cpp  reachability.cpp  rrt_connect.cpp  task_constrained_rrt.cpp
src/exercises/playbacks/: linear.rwplay  rrt_closest.rwplay  rrt_connect.rwplay  rrt_connect_pruned.rwplay  rrt_target.rwplay
src/exercises/scenes/ur5_workcell/: Scene.wc.xml
src/exercises/scenes/ur5_workcell_obstacle/: Scene.wc.xml
src/playbacks/: reachability.rwplay
src/project/: handin1.cpp  handin1.py  main.py
src/project/data/: linear.csv  parabolic.csv
src/project/playbacks/: linear.rwplay  parabolic.rwplay
src/project/robotics/: handin1.cpp  handin1.py  handin2.cpp  main.cpp
src/project/robotics/data/: linear_from_above.csv  linear_from_above2.csv  linear_from_side.csv  linear_from_side2.csv  parabolic_from_above.csv  parabolic_from_above2.csv  parabolic_from_side.csv  parabolic_from_side2.csv
src/project/robotics/playbacks/: linear_from_above.rwplay  linear_from_side.rwplay  parabolic_from_above.rwplay  parabolic_from_side.rwplay
src/project/vision/Code/: point_estimation.py  run_all.py  settings.py  trial_run.py  visu1.py  visu2.py
src/project/vision/results/: estimate_81_0.0001_0.txt  estimate_81_0.0001_1.txt  (+102 more)
src/project/workcell1/: Scene.wc.xml
src/project/workcell2/: Scene.wc.xml
src/scenes/kuka_kr16_workcell/: Scene.wc.xml
src/scenes/ur5_workcell/: Scene.wc.xml
